PCISecretesManagerTemplate.yml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: This stack is to create a secret in AWS Secrets Manager, Security Groups and a VPC Endpoint for Secrets Manager.
Parameters:
  PriceSurveyVPC1:
    Description: Select a VPC to deploy resources.
    Type: String
    Default: vpc-xxxxxxx
  PriceSurveySubnets1:
    Description: Select multiple subnets from selected VPC.
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-yyyyyyyy,subnet-zzzzzzzz
  PriceSurveyFileServersCIDR1:
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
    Default: 10.0.0.0/8
    Description: Required for Security Groups. Enter CIDR Block (eg 172.31.0.0/16)
      for your file servers, You can add more entries in the prefix list resource.
    Type: String  
Resources:
  PriceSurveyFileServersPrefixList1:
    Type: AWS::EC2::PrefixList
    Properties:
      PrefixListName: FS-CIDRs
      AddressFamily: IPv4
      MaxEntries: 10
      Entries:
        - Cidr: !Ref 'PriceSurveyFileServersCIDR1'
          Description: CIDR block for File Servers
      Tags:
        - Key: Name
          Value: FS Prefix List
  PriceSurveyLambdaSG1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'PriceSurveyLambdaSG1'
      VpcId: !Ref 'PriceSurveyVPC1'
      GroupDescription: SG for price survey Lambda
      Tags:
        - Key: Name
          Value: PriceSurveyLambdaSG1
  LambdaSGEgress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !GetAtt 'PriceSurveySecretsManagerVpceSG1.GroupId'
      Description: HTTPS outbound to Secrets Manager VPC Endpoint
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  LambdaSGEgress2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 445
      ToPort: 445
      DestinationPrefixListId: !Ref 'PriceSurveyFileServersPrefixList1'
      Description: SMB outbound access to file servers CIDRs
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  PriceSurveySecretsManagerVpceSG1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'PriceSurveyVPC1'
      GroupDescription: SG for Secrets Manager VPC endpoint
      Tags:
        - Key: Name
          Value: PriceSurveySecretsManagerVpceSG1
  SecretsManagerVpceSGEgress3:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 172.31.0.0/22
      Description: HTTPS outbound to Lambda
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  SecretsManagerVpceSGEgress4:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 445
      ToPort: 445
      CidrIp: 172.31.0.0/22
      Description: HTTPS outbound to Lambda
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  SecretsManagerVpceSGIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: "-1"
      FromPort: 443
      ToPort: 443
      CidrIp: 10.0.0.0/8
      Description: HTTPS inbound from Lambda
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  SecretsManagerVpceSGIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: "-1"
      FromPort: 443
      ToPort: 443
      CidrIp: 172.31.0.0/22
      Description: HTTPS inbound from Lambda
      GroupId: !GetAtt 'PriceSurveyLambdaSG1.GroupId'
  PriceSurveySecretsManagerVPCEndpoint1:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - secretsmanager:GetSecretValue
            Resource: !Sub '${PriceSurveySecret1}'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.secretsmanager'
      SubnetIds: !Split
        - ','
        - Fn::Join:
            - ','
            - !Ref 'PriceSurveySubnets1'
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref 'PriceSurveySecretsManagerVpceSG1'
      VpcId: !Ref 'PriceSurveyVPC1'
  PriceSurveySecret1:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: PriceSurveyFSNewCredentials1
      Description: This secret has a hardcoded password in SecretString, replace in
        Secrets Manager.
      SecretString: '{"eodusername":"parkland\\pci-test-sftp","eodpassword":"ZHi(U9@3WC4&nl(@","eodhost":"172.31.0.150","eodshare":"EnterpriseData\\ARC1\\IMPORTS\\DR\\DRIMP\\DealerEODFiles","psusername":"parkland\\pci-test-sftp","pspassword":"ZHi(U9@3WC4&nl(@","pshost":"10.250.240.112","psshare":"PICData\\PS"}'
      Tags:
        - Key: AppName
          Value: AppB
  PriceSurveySecretResourcePolicy1:
    Type: AWS::SecretsManager::ResourcePolicy
    Properties:
      SecretId: !Ref 'PriceSurveySecret1'
      ResourcePolicy:
        Version: '2012-10-17'
        Statement:
          - Sid: EnableSecretsManagerpermissions
            Effect: Allow
            Principal:
              AWS: !Sub '${AWS::AccountId}'
            Action: secretsmanager:*
            Resource: '*'
          - Sid: RestrictGetSecretValueoperation
            Effect: Deny
            Principal: '*'
            Action: secretsmanager:GetSecretValue
            Resource: '*'
            Condition:
              StringNotEquals:
                aws:sourceVpce: !Sub '${PriceSurveySecretsManagerVPCEndpoint1}'
